@@ -98,7 +98,8 @@ Create a matrix of risk scores, number of subjects by number of transitions.
 The reason is that different transitions often have different coefficients.
 
 <<survfit.coxphms-setup3b>>=
-risk2 <- exp(x2 %*% coef(object, matrix=TRUE) - xcenter)
+temp <- coef(object, matrix=TRUE) # ignore missing coefs
+risk2 <- exp(x2 %*% ifelse(is.na(temp), 0, temp) - xcenter)
 @ 
 
 The first step in the computation is to compute the hazard functions for
